--- a/common/deliverable.sty
+++ b/common/deliverable.sty
@@ -99,6 +99,7 @@
 % Font and spacing settings
 \renewcommand{\rmdefault}{phv} % Arial font
 \renewcommand{\sfdefault}{phv} % Arial font
+\usepackage[cm]{sfmath} % formulas
 \setlength{\parskip}{1em} % Add space between paragraphs
 \setlength{\oddsidemargin}{0cm} % Set margins
 \setlength{\evensidemargin}{0cm}
